--- a/WebContent/resources/common_styles.css
+++ b/WebContent/resources/common_styles.css
@@ -2,7 +2,44 @@
 @import url("bootstrap/css/bootstrap.min.css");
 
 /* Load Admin Panel custom css */
-@import url("dist/css/AdminLTE.min.css");
+@import url("dist/css/AdminLTE.css");
 
-/* Load common css */
-@import url("dist/css/common_styles.css");
+input[type=checkbox].css-checkbox {
+	position: absolute;
+	z-index: -1000;
+	left: -1000px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	height: 1px;
+	width: 1px;
+	margin: -1px;
+	padding: 0;
+	border: 0;
+}
+
+input[type=checkbox].css-checkbox+label.css-label {
+	padding-left: 21px;
+	height: 15px;
+	display: inline-block;
+	line-height: 16px;
+	background-repeat: no-repeat;
+	background-position: 0 0;
+	_font-size: 16px;
+	vertical-align: middle;
+	cursor: pointer;
+}
+
+input[type=checkbox].css-checkbox:checked+label.css-label {
+	background-position: 0 -16px;
+}
+
+label.css-label {
+	background-image: url(csscheckbox_eyes.png); 
+	-webkit-touch-callout :none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-webkit-touch-callout: none;
+}
